Updated right shift protocol